[project]
name = "open-webui-rocm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "pytorch-triton-rocm",
    "torchaudio",
    "torchvision",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/rocm6.3/torch-2.7.1%2Brocm6.3-cp311-cp311-manylinux_2_28_x86_64.whl" }
pytorch-triton-rocm = { url = "https://download.pytorch.org/whl/pytorch_triton_rocm-3.3.1-cp311-cp311-linux_x86_64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/rocm6.3/torchaudio-2.7.1%2Brocm6.3-cp311-cp311-manylinux_2_28_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/rocm6.3/torchvision-0.22.1%2Brocm6.3-cp311-cp311-manylinux_2_28_x86_64.whl" }
